--- a/partials/park-list-view.html
+++ b/partials/park-list-view.html
@@ -1,8 +1,10 @@
 <div class="bgr-box-primary">
-    <div>
-        <h2>Parks</h2>
-        <div class="">
-            <button class="btn btn-default btn-accent btn-right pull-right" ng-click="addingPark = true;" ng-show="!addingPark">Add <i class="material-icons">landscape</i></button>
+    <div class="park-list_top">
+        <div class="park-list_header">
+            <p>Parks</p>
+            <div class="park-list_buttons">
+                <button class="btn btn-default btn-accent" ng-click="addingPark = true;" ng-show="!addingPark">Add <i class="material-icons">landscape</i></button>
+            </div>
         </div>
 
         <!--  -->
