--- a/partials/home-view.html
+++ b/partials/home-view.html
@@ -5,7 +5,7 @@
             <a ng-href="#!/list">Parks</a>
         </div>
         <div class="home_container-boxes campsite-box">
-            <a ng-href="#!/search">Search</a>
+            <a ng-href="#!/home">Search</a>
         </div>
     </div>
 </div>
