--- a/partials/login-view.html
+++ b/partials/login-view.html
@@ -1,5 +1,5 @@
 <div class="bgr-box-home home-container col-xs-4 col-xs-offset-4">
-    <div class="login-box_left home_container-boxes">
+    <div class="login-box_left">
         <div class="login-input-wrapper">
             <input type="email" class="form-control form-spacing" placeholder="Email Address" ng-model="auth.email" required autofocus>
             <input type="password" class="form-control form-spacing" placeholder="Password" ng-model="auth.password" required>
