--- a/sass/main.scss
+++ b/sass/main.scss
@@ -112,11 +112,19 @@ nav {
 .home-container {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    height: 60vh;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    min-height: 100%;
+
+    // display: flex;
+    // flex-direction: row;
+    // flex-wrap: nowrap;
+    // width: 100%;
+    // margin: 0;
+    // padding: 0;
+    // height: 60vh;
     .park-box {
         background: url(http://i2.cdn.cnn.com/cnnnext/dam/assets/160129105442-nationalparks-1-super-169.jpg) no-repeat center center;
         background-size: cover;
@@ -135,12 +143,17 @@ nav {
 }
 
 .home_container-boxes {
+    margin: 10px;
+    flex-grow: 1;
+    height: 300px;
+    width: 500px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: center; //align-items: center;
-    width: 50%;
-    height: 100%;
+    justify-content: space-around; 
+    align-items: center;
+    // width: 50%;
+    // min-height: 100%;
     text-align: center;
     font-size: 50px; //padding-top: 10%;
 }
@@ -156,10 +169,9 @@ nav {
 
 .bgr-box-home {
     background-color: $primary;
-    height: 60vh;
+    min-height: 100%;
     width: 100%;
     margin: 0;
-    overflow: auto;
     a,
     a:hover {
         color: white;
