Fixed ng-model google maps bug

--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -83,11 +83,11 @@
             </div>
             <div class="input-field white-text">
                 <label>Latitude</label>
-                <input type="text" class="" placeholder="Latitude" ng-model="editedCampsite.latitude" />
+                <input type="text" class="" placeholder="Latitude" ng-model="editedCampsite.coordinates.lat" />
             </div>
 
             <div class="input-field white-text">
-                <input type="text" class="" placeholder="Longitude" ng-model="editedCampsite.longitude" />
+                <input type="text" class="" placeholder="Longitude" ng-model="editedCampsite.coordinates.lng" />
                 <label>Longitude</label>
             </div>
             <div class="input-field white-text">
