--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -1,3 +1,4 @@
+<div class="divider"></div>
 <div class="bgr-box-primary">
     <div class="park-top-box">
         <div class="park-title-box">
@@ -47,11 +48,11 @@
             <div class="add-campsite_column white-text">
                 <div class="">
                     <label>Latitude</label>
-                    <input type="text" class="" placeholder="Latitude" ng-model="newCampsite.latitude" />
+                    <input type="text" class="" placeholder="Latitude" ng-model="newCampsite.coordinates.lat" />
                 </div>
                 <div class="">
                     <label>Longitude</label>
-                    <input type="text" class="" placeholder="Longitude" ng-model="newCampsite.longitude" />
+                    <input type="text" class="" placeholder="Longitude" ng-model="newCampsite.coordinates.lng" />
                 </div>
                 <div class="">
                     <label>Bathrooms</label>
